# notion-sync

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml  config.toml  flake.nix
.github/workflows/: ci.yml  release.yml
nix/: hjem.nix  home-manager.nix  lib.nix  module.nix
scripts/: install.sh
src/: chunk.rs  cli.rs  config.rs  hashutil.rs  language.rs  lib.rs  main.rs  state.rs
src/api/: client.rs  errors.rs  mod.rs  models.rs  ratelimit.rs
src/sync/: conflict.rs  engine.rs  locks.rs  mod.rs  poller.rs  reconcile.rs  snapshot.rs  util.rs  watcher.rs  webhook.rs
