[package]
name = "notion-sync"
version = "0.5.1"
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "Two-way sync daemon mirroring a local codebase into a Notion page tree"
repository = "https://github.com/feltfomo/notion-sync"
# `cargo run` (no --bin) launches the daemon; the probe stays opt-in via --bin.
default-run = "notion-sync"

# Two binaries: the daemon, and the standalone fidelity probe (the write-back fidelity gate).
[[bin]]
name = "notion-sync"
path = "src/main.rs"

[[bin]]
name = "fidelity-probe"
path = "src/bin/fidelity_probe.rs"

[lib]
name = "notion_sync"
path = "src/lib.rs"

[dependencies]
# Async runtime. Only the features we actually use, to keep the tree lean.
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "signal"] }
# HTTP client. rustls-tls avoids an OpenSSL system dependency -> reproducible buildRustPackage.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
toml = "0.8"
# bundled => compiles SQLite from source, no system libsqlite dependency.
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1"
# gzip for the content-addressed snapshot store (compress-at-rest + dedup by hash).
flate2 = "1"
# Declarative CLI parsing for the backup/restore subcommands.
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Webhook receiver: a minimal hyper 1.x HTTP listener for Notion integration webhooks.
# hyper / hyper-util / http-body-util are already in the tree via reqwest 0.12; promoting
# them to direct deps just makes the server side explicit.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
# HMAC-SHA256 over the raw body to verify the X-Notion-Signature header. Pure-Rust
# RustCrypto crates, kept independent of reqwest's TLS backend on purpose: signature
# verification must not break if the rustls backend (ring vs aws-lc-rs) flips on a bump.
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
# Dev-only; does not ship in the daemon binary.
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
